refactor: some changes in the tests

--- a/SocialApp/SocalApp.Tests/SocalApp.Tests.csproj
+++ b/SocialApp/SocalApp.Tests/SocalApp.Tests.csproj
@@ -9,6 +9,7 @@
 
 	  <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
